# LLM_KOR_ESSAY_EVAL

./: README.md  install_rye_mac.sh  pyproject.toml
files/: q1_grading_1_1.txt  q1_grading_2_1.txt  q1_grading_3_1.txt  q2_grading_1_2.txt  q2_grading_2_2.txt  q2_grading_3_2.txt  q3_grading_1_3.txt  q3_grading_2_3.txt  q3_grading_3_3.txt  q4_grading_1_4.txt  q4_grading_2_4.txt  q4_grading_3_4.txt
src/gapyear_llm/: __init__.py  __main__.py  get_text.py
